# BTNet-BS

./: BTNN_BS_Eur_v4.ipynb  README.md  btnn-bs-torch-v1.ipynb  btnn-bs-torch-v2.ipynb  btnn-bs-torch-v3.ipynb  btnn-bs-torch-v4.ipynb  btnn-bs-torch.ipynb  environment.yml  model_american.onnx  model_european.onnx  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.ipynb_checkpoints/: btnn-bs-torch-checkpoint.ipynb  environment-checkpoint.yml
.virtual_documents/: BTNN_BS_Eur_v4.ipynb  Untitled.ipynb
FinalQualifyingWork/: VKR.docx  ~$С_2026.docx  ВКР-2026_ММиИИ_Петров_НКНбд-01-22.docx  ФОС_2026.docx
FinalQualifyingWork/Docs/: ЗаданиеПетров-НКНбд_ММИИ.docx  Заявление на размещение ВКР.docx  ПодтверждениеОригинальностиВКР.doc
FinalQualifyingWork/PreProtection/: Makefile  Presentation.md  Report.md  Theses.md
FinalQualifyingWork/Speech/: Makefile  Protection.md
FinalQualifyingWork/Task/: IndividualTask.docx
FinalQualifyingWork/figures/: sigma_sweep_metrics.json
Practice/Diary/: дневник-петров.docx
Practice/Feedback/: отзыв-характеристика-петров.docx
Practice/Report/: отчет-петров.docx
PreGraduationPractice/Diary/: Diary.docx
ScientificResearch/: ФОС_2026_4_к_updated.docx
briefings/: brief-17_04.md
btnn_bs/: __init__.py  analytics.py  greeks.py  layers.py  model_american.py  model_american_relu.py  model_european.py  plotting.py  quantlib_ref.py  training.py  tree.py
btnn_bs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
btnn_bs/quantlib/: __init__.py
outputs/: model_american.onnx  model_european.onnx
tmp/: plan.md
(+18 files in other folders)
