[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btnn-bs"
version = "0.1.0"
description = "Binomial-tree shaped networks (BTNet) for option pricing"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
quantlib = ["QuantLib-Python"]

[tool.setuptools.packages.find]
where = ["."]
include = ["btnn_bs*"]
